    organic/C8H18 - octane/Kerl-313K.yml
    organic/C8H18 - octane/Kerl-333K.yml
    organic/C6H12 - cyclohexane/Kerl-293K.yml
    organic/C6H12 - cyclohexane/Kerl-313K.yml
    organic/C6H12 - cyclohexane/Kerl-333K.yml
  new data (thanks to Guy Beadie, Naval Research Laboratory, Washington DC, USA, for providing data in yaml format!)
    organic/(C5O2H8)n - poly(methyl methacrylate)/Beadie.yml
  new data
    organic/C2H2 - acetylene/Loria.yml
  improved data
    organic/CH4 - methane/Loria.yml
  new and updated data (+ extended data - INFO field - for optical designers)
    glass/hikari/*.yml
    glass/ohara/*.yml

2015-12-01
  better data (thanks to Elisa Sani)
    organic/C2H6O2 - ethylene glycol/Sani.yml
  removed data (dispersion formulae for select ranges from Sani.yml; Sani1.yml formula for vis/NIR is also included in Sani_and_Otanicar.yml)
    organic/C2H6O2 - ethylene glycol/Sani1.yml
    organic/C2H6O2 - ethylene glycol/Sani2.yml
  new data (thanks to Mikael Malmström)
    main/Ta2O5/Bright-amorphous.yml
    main/Ta2O5/Bright-nanocrystalline.yml
    main/Si/Chandler-Horowitz.yml
  new data (thanks to Robert Treharne, University of Liverpool, UK, for providing data in yaml format!)
    other/perovskite/CH3NH3PbI3/Phillips.yml
  new data (thanks to Mathieu Perrin INSA Rennes, France for suggesting data)
    main/ZnSe/Marple.yml
    main/ZnTe/Marple.yml
    main/CdTe/Marple.yml
  bug fixes
    corrected misspelled McPeak name in libraty.yml
    fixed dispersion formula in main/LiIO3/Herbst-o.yml.yml (thanks to Jiaan Zheng, DESY, Hamburg, Germany)
    fixed missing data headers in glass/schott/obsolete/LAKL12.yml and LASFN9.yml (thanks to Thibault North!)
    removed tabs in main/Ag/McPeak.yml, main/Al/McPeak.yml, main/Au/McPeak.yml, main/Cu/McPeak.yml (thanks to Thibault North!)
    fixed encoding error in main/Ag3AsS3/Hulme-e.yml (thanks to Thibault North!)
  other
    library.yml: ' - ' replaced by ': ' in page names

2015-08-18